--- a/src/main/resources/public/template/table-list.html
+++ b/src/main/resources/public/template/table-list.html
@@ -7,16 +7,16 @@
     			</th>
     			<th class="icon" />
     			<th class="content">
-					<a translate content="title" ng-click="orderBy('name')"></a>
+					<span translate content="title" ng-click="orderBy('name')"></span>
 				</th>
     			<th class="user">
-					<a translate content="from" ng-click="orderBy('fromName')"></a>
+					<span translate content="from" ng-click="orderBy('fromName')"></span>
 				</th>
 				<th class="user" ng-if="folder.extraColumns.indexOf('to') > -1">
-					<a translate content="to" ng-click="orderBy('toName')"></a>
+					<span translate content="to" ng-click="orderBy('toName')"></span>
 				</th>
     			<th class="date">
-					<a translate content="sentDate" ng-click="orderBy('sent')"></a>
+					<span translate content="sentDate" ng-click="orderBy('sent')"></span>
 				</th>
     		</tr>
 		</thead>
