fixed images in icons view

--- a/src/main/resources/public/template/icons-list.html
+++ b/src/main/resources/public/template/icons-list.html
@@ -5,10 +5,8 @@
 			<a ng-href="[[folder.name !== 'history' ? '/rack/get/'+rack._id : '' ]]" class="[[rack.metadata.contentType]] container">
 				<i class="[[folder.name === 'history' && rack.metadata.contentType === 'img' ? 'unknown' : rack.metadata.contentType]]-large" ng-if="rack.metadata.contentType !== 'img' || folder.name === 'history'">
 				</i>
-				<div ng-if="rack.metadata.contentType === 'img' && folder.name !== 'history'" class="twelve cell">
-					<div class="clip absolute">
-						<img ng-src="[['/rack/get/'+rack._id+'?thumbnail=120x120']]" alt="thumbnail" />
-					</div>
+				<div class="clip absolute"ng-if="rack.metadata.contentType === 'img' && folder.name !== 'history'">
+					<img ng-src="[['/rack/get/'+rack._id+'?thumbnail=150x150']]" alt="thumbnail" />
 				</div>
 			</a>
 			<input type="checkbox" data-ng-model="rack.selected" ng-if="!folder.readOnly"/>
