f #3738 browse button alignment issue

--- a/src/main/resources/public/template/send-rack.html
+++ b/src/main/resources/public/template/send-rack.html
@@ -24,7 +24,7 @@
 			<h1 translate key="rack.sendRack"></h1>
 			<div class="row">
 				<h3 class="four cell inline" translate key="rack.file"></h3>
-				<div class="eight cell select-file">
+				<div class="eight cell select-file input-block">
 					<div class="hidden-content">
 						<input type="file" multiple files-input-change="setFilesName()" data-ng-model="newFile.files" />
 					</div>
