--- a/src/main/resources/public/template/copy-files.html
+++ b/src/main/resources/public/template/copy-files.html
@@ -36,10 +36,8 @@
 
 		<div class="clear"></div>
 		<div class="lightbox-buttons fluid">
-			<input type="submit" i18n-value="rack.copy" ng-click="copy()" />
+			<input type="submit" i18n-value="rack.copy" ng-click="copy()"  ng-disabled="!targetFolder" />
 			<input type="button" class="cancel" i18n-value="cancel" />
-
-			<div class="clear"></div>
 		</div>
 	</div>
 </form>
