--- a/src/main/resources/public/template/library.html
+++ b/src/main/resources/public/template/library.html
@@ -3,26 +3,31 @@
 		[[folder.name]]
 	</a>
 	<ul class="row">
-		<li data-ng-repeat="folder in folder.children" data-ng-include="'folder-management'"></li>
+		<li ng-repeat="folder in folder.children" ng-include="'folder-management'"></li>
 	</ul>
 </script>
 
-<div class="row" ng-controller="FolderController">
+<container template="copy-files"></container>
+<container template="send-rack"></container>
+
+<div class="row" ng-controller="LibraryController">
 	<div class="row">
 		<h1 class="four cell" data-reload>
-			<a><i class="rack"></i><span translate content="rack.title"></span></a>
+			<a><i class="rack"></i><i18n>rack.title</i18n></a>
 		</h1>
 		<nav class="contextual-buttons eight cell">
 			<div class="action-buttons">
-				<button ng-click="openNewRack()" translate content="rack.sendRack" workflow="rack.send"></button>
+				<button ng-click="openNewRack()" workflow="rack.send">
+                    <i18n>rack.sendRack</i18n>
+                </button>
 			</div>
 			<div class="display-buttons" ng-if="template.contains('list', 'table-list') || template.contains('list', 'icons-list')">
 				<i class="show-list"
 				   ng-class="{ selected: template.contains('list', 'table-list') }"
-				   ng-click="openView('list', 'table-list')"></i>
+				   ng-click="template.open('list', 'table-list')"></i>
 				<i class="show-icons"
 				   ng-class="{ selected: template.contains('list', 'icons-list') }"
-				   ng-click="openView('list', 'icons-list')"></i>
+				   ng-click="template.open('list', 'icons-list')"></i>
 			</div>
 		</nav>
 	</div>
@@ -35,18 +40,20 @@
 						<a ng-if="!f.workflow"
 						   ng-click="refreshListing(f)"
 						   translate content="rack.[[f.name]]"
-						   ng-class="{ selected: f.name === folder.name }"/>
+						   ng-class="{ selected: f.name === folder.name }">
+                        </a>
 						<a ng-if="f.workflow"
 						   workflow="[[f.workflow]]"
 						   ng-click="refreshListing(f)"
 						   translate content="rack.[[f.name]]"
-						   ng-class="{ selected: f.name === folder.name }"/>
+						   ng-class="{ selected: f.name === folder.name }">
+                        </a>
 					</li>
 				</ul>
 			</nav>
 			<div class="nine row">
 				<hr class="row" />
-				<h2 translate content="rack.usedSpace"></h2>
+				<h2><i18n>rack.usedSpace</i18n></h2>
 				<progress-bar max="quota.max" filled="quota.used" unit="[[quota.unit]]"></progress-bar>
 			</div>
 		</section>
