[evo]#10611 explorer navigation on rack icon-view

--- a/src/main/resources/public/template/icons-list.html
+++ b/src/main/resources/public/template/icons-list.html
@@ -1,21 +1,41 @@
+<p class="row info zero-mobile tuto">
+	<b>Naviguez au sein de votre casier en vue vignettes :</b><br>
+	<b>Cliquez</b> pour séléctionner et accéder au menu d'options, <br>
+	<b>Cliquez sur l'icône</b> pour télécharger le document<br>
+</p>
+<!-- <p class="row info zero tuto">
+	<b>Naviguez au sein de votre casier en vue vignettes sur mobile :</b><br>
+	<b>Cliquez longtemps</b> pour séléctionner et accéder au menu d'options, et cliquez en dehors pour désélectionner<br>
+	<b>Cliquez sur l'icône</b> pour télécharger le document<br>
+</p> -->
+
 <article class="icons-view">
 	<header>&nbsp;</header>
 	<div>
-		<div ng-repeat="rack in rackList.all | filter:filterRack:true" class="element reduce-block-six">
-			<a ng-href="[[folder.name !== 'history' ? '/rack/get/'+rack._id : '' ]]" class="[[rack.metadata.contentType]] container">
-				<i class="[[folder.name === 'history' && rack.metadata.contentType === 'img' ? 'unknown' : rack.metadata.contentType]]-large" ng-if="rack.metadata.contentType !== 'img' || folder.name === 'history'">
-				</i>
-				<div class="clip absolute" ng-if="rack.metadata.contentType === 'img' && folder.name !== 'history'">
-					<img ng-src="[['/rack/get/'+rack._id+'?thumbnail=120x120']]" alt="thumbnail" />
-				</div>
-			</a>
-			<input type="checkbox" ng-model="rack.selected" ng-if="!folder.readOnly"/>
-			<legend>
-				<a ng-href="[[folder.name !== 'history' ? '/rack/get/'+rack._id : '' ]]">
-					[[rack.name]]
+		<div ng-repeat="rack in rackList.all | filter:filterRack:true" class="element reduce-block-six" ng-class="{ selected: rack.selected }">
+
+			<explorer ng-model="rack.selected">
+				<a class="[[rack.metadata.contentType]] container">
+					<i class="[[folder.name === 'history' && rack.metadata.contentType === 'img' ? 'unknown' : rack.metadata.contentType]]-large" ng-if="rack.metadata.contentType !== 'img' || folder.name === 'history'">
+					</i>
+					<div class="clip absolute" ng-if="rack.metadata.contentType === 'img' && folder.name !== 'history'">
+						<img ng-src="[['/rack/get/'+rack._id+'?thumbnail=120x120']]" alt="thumbnail" />
+					</div>
 				</a>
-				<a ng-href="/userbook/annuaire#[[folder.name !== 'history' ? rack.from : rack.to]]"><strong>[[folder.name !== 'history' ? rack.fromName : rack.toName]]</strong></a>
-			</legend>
+				<legend>
+					<a>
+						[[rack.name]]
+						<br>
+						<strong>[[folder.name !== 'history' ? rack.fromName : rack.toName]]</strong>
+					</a>
+				</legend>
+
+				<i class="download" tooltip="[['rack.download']]">
+					<a ng-href="[[folder.name !== 'history' ? '/rack/get/'+rack._id : '' ]]"></a>
+				</i>
+
+			</explorer>
+
 		</div>
 	</div>
 </article>
