--- a/src/main/resources/public/template/copy-files.html
+++ b/src/main/resources/public/template/copy-files.html
@@ -18,11 +18,11 @@
  ~
  -->
 
-<lightbox show="lightboxes.copy">
+<lightbox show="lightboxes.copy" on-close="lightboxes.copy = false">
     <form ng-submit="copy()">
         <div class="row">
             <h2><i18n>rack.copy</i18n></h2>
-            <nav class="vertical">
+            <nav class="vertical" ng-if="folder">
                 <nav class="vertical">
                     <ul>
                         <li data-ng-include="'folder-management'"></li>
@@ -33,15 +33,19 @@
                 <i18n>rack.createFolder</i18n>
             </a>
             <div class="row input-block" ng-if="newFolderEditing">
-                <input type="text" ng-model="newFolder.name" />
-                <button ng-click="$parent.newFolderEditing = false; createEditFolder()">
+                <input type="text" ng-model="newFolder.name" class="cell" />
+                <button ng-click="$parent.newFolderEditing = false; createEditFolder()" class="cell">
                     <i18n>rack.folder.create</i18n>
                 </button>
             </div>
 
             <div class="lightbox-buttons fluid">
-                <button ng-disabled="!targetFolder"><i18n>rack.copy</i18n></button>
-                <button type="button" class="cancel"><i18n>cancel</i18n></button>
+                <button ng-disabled="!targetFolder" class="right-magnet">
+                    <i18n>rack.copy</i18n>
+                </button>
+                <button type="button" class="cancel right-magnet" ng-click="lightboxes.copy = false">
+                    <i18n>cancel</i18n>
+                </button>
             </div>
         </div>
     </form>
