[Ano] #11138 : Notification urls use the recipient domain

--- a/src/main/resources/view/notify/rack-post.html
+++ b/src/main/resources/view/notify/rack-post.html
@@ -1,2 +1,2 @@
-<a href="{{uri}}">{{username}}</a>
-<br/><span>{{#i18n}}timeline.rack.post{{/i18n}}</span><a href="{{resourceUri}}">{{documentName}}</a>.
+<a href="{{#host}}{{uri}}{{/host}}">{{username}}</a>
+<br/><span>{{#i18n}}timeline.rack.post{{/i18n}}</span><a href="{{#host}}{{resourceUri}}{{/host}}">{{documentName}}</a>.
